--- a/DecisionTreesRegression2.ipynb
+++ b/DecisionTreesRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyP+EnFigI8482ddKimJirgy",
+      "authorship_tag": "ABX9TyOhozOstQWXmtyh3xq8duJh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,6 +47,21 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "teAVNqMIcWyo"
+      },
+      "source": [
+        "**The [dataset](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_olivetti_faces.html)**<br>\n",
+        "\n",
+        "Load the Olivetti faces data-set from AT&T<br>\n",
+        ">Classes: 4<br>\n",
+        "Samples total: 400<br>\n",
+        "Dimensionality: 4096<br>\n",
+        "Features: real, between 0 and 1<br>"
+      ]
     },
     {
       "cell_type": "code",
@@ -100,6 +115,33 @@
         "y_train = train[:, n_pixels // 2:]\n",
         "X_test = test[:, :(n_pixels + 1) // 2]\n",
         "y_test = test[:, n_pixels // 2:]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iQkYmcCXdRsO"
+      },
+      "source": [
+        "# Plot the completed faces\n",
+        "\n",
+        "\n",
+        "image_shape = (64, 64)\n",
+        "\n",
+        "n_cols = 1 + len(ESTIMATORS)\n",
+        "plt.figure(figsize=(2. * n_cols, 2.26 * n_faces))\n",
+        "\n",
+        "for i in range(5):\n",
+        "    true_face = np.hstack((X_test[i], y_test[i]))\n",
+        "    sub = plt.subplot(5, n_cols, i * n_cols + 1)\n",
+        "\n",
+        "    sub.axis(\"off\")\n",
+        "    sub.imshow(true_face.reshape(image_shape),\n",
+        "               cmap=plt.cm.gray,\n",
+        "               interpolation=\"nearest\")\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
