--- a/DecisionTreesRegression2.ipynb
+++ b/DecisionTreesRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOhozOstQWXmtyh3xq8duJh",
+      "authorship_tag": "ABX9TyOj0ZUrDvrmjojC5aGNJ5Sd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,26 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cagBRT/Machine-Learning/blob/master/DecisionTreesRegression2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XJKgK-e9hjRV"
+      },
+      "source": [
+        "This notebook uses three regression models: ExtraTreesRegressor, KNeighborsRegressor, LinearRegression. \n",
+        "\n",
+        "It also uses the Olivetti faces dataset. It has 400 images of human faces. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jdEVJOg8jcmz"
+      },
+      "source": [
+        "This notebook trains the three regression modelss ono the faces, then asks each model to recreate the lower half of each image. "
       ]
     },
     {
@@ -78,11 +98,33 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "byKikixqkVwE"
+      },
+      "source": [
+        "data.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Yk0DlCd8jrcO"
+      },
+      "source": [
+        "Split the data into training and test sets. The first 30 images are for training. The rest are for testing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "3JUe6Ykh8TUF"
       },
       "source": [
-        "train = data[targets < 30]\n",
-        "test = data[targets >= 30]  # Test on independent people"
+        "test = data[targets < 30]\n",
+        "train = data[targets >= 30]  # Test on independent people\n",
+        "print(\"train shape:\",train.shape)\n",
+        "print(\"test shape:\",test.shape)"
       ],
       "execution_count": null,
       "outputs": []
@@ -125,18 +167,14 @@
         "id": "iQkYmcCXdRsO"
       },
       "source": [
-        "# Plot the completed faces\n",
-        "\n",
-        "\n",
+        "# Plot some of the images\n",
         "image_shape = (64, 64)\n",
-        "\n",
-        "n_cols = 1 + len(ESTIMATORS)\n",
-        "plt.figure(figsize=(2. * n_cols, 2.26 * n_faces))\n",
+        "n_cols = 1\n",
+        "plt.figure(figsize=(2. * n_cols, 2.26 * 5))\n",
         "\n",
         "for i in range(5):\n",
         "    true_face = np.hstack((X_test[i], y_test[i]))\n",
         "    sub = plt.subplot(5, n_cols, i * n_cols + 1)\n",
-        "\n",
         "    sub.axis(\"off\")\n",
         "    sub.imshow(true_face.reshape(image_shape),\n",
         "               cmap=plt.cm.gray,\n",
