--- a/DecisionTreesRegression2.ipynb
+++ b/DecisionTreesRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOj0ZUrDvrmjojC5aGNJ5Sd",
+      "authorship_tag": "ABX9TyMJ96bMgYL6MKibZ+YKszKb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,8 +121,8 @@
         "id": "3JUe6Ykh8TUF"
       },
       "source": [
-        "test = data[targets < 30]\n",
-        "train = data[targets >= 30]  # Test on independent people\n",
+        "train = data[targets < 30]\n",
+        "test = data[targets >= 30]  # Test on independent people\n",
         "print(\"train shape:\",train.shape)\n",
         "print(\"test shape:\",test.shape)"
       ],
