--- a/DecisionTreesRegression2.ipynb
+++ b/DecisionTreesRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOj0ZUrDvrmjojC5aGNJ5Sd",
+      "authorship_tag": "ABX9TyOiLntJ76xOoDcr28IH7pAT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -112,7 +112,7 @@
         "id": "Yk0DlCd8jrcO"
       },
       "source": [
-        "Split the data into training and test sets. The first 30 images are for training. The rest are for testing"
+        "Split the data into training and test sets. The first 30 images are for testing. The rest are for testing"
       ]
     },
     {
@@ -164,6 +164,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "3t0JBekZsE0j"
+      },
+      "source": [
+        "print(\"train shape:\",X_train.shape)\n",
+        "print(\"test shape:\",X_test.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "iQkYmcCXdRsO"
       },
       "source": [
@@ -172,7 +184,7 @@
         "n_cols = 1\n",
         "plt.figure(figsize=(2. * n_cols, 2.26 * 5))\n",
         "\n",
-        "for i in range(5):\n",
+        "for i in range(4):\n",
         "    true_face = np.hstack((X_test[i], y_test[i]))\n",
         "    sub = plt.subplot(5, n_cols, i * n_cols + 1)\n",
         "    sub.axis(\"off\")\n",
