--- a/DecisionTreesRegression2.ipynb
+++ b/DecisionTreesRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOiLntJ76xOoDcr28IH7pAT",
+      "authorship_tag": "ABX9TyN1TqZWMuoSjjjCNPZ3A4ap",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,7 +45,7 @@
         "id": "jdEVJOg8jcmz"
       },
       "source": [
-        "This notebook trains the three regression modelss ono the faces, then asks each model to recreate the lower half of each image. "
+        "This notebook trains the three regression modelss on the faces, then asks each model to recreate the lower half of each image. "
       ]
     },
     {
@@ -184,7 +184,7 @@
         "n_cols = 1\n",
         "plt.figure(figsize=(2. * n_cols, 2.26 * 5))\n",
         "\n",
-        "for i in range(4):\n",
+        "for i in range(5):\n",
         "    true_face = np.hstack((X_test[i], y_test[i]))\n",
         "    sub = plt.subplot(5, n_cols, i * n_cols + 1)\n",
         "    sub.axis(\"off\")\n",
