--- a/DecisionTreesRegression2.ipynb
+++ b/DecisionTreesRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyN1TqZWMuoSjjjCNPZ3A4ap",
+      "authorship_tag": "ABX9TyOnKTUOfUYD+858/voIx0Bh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -167,8 +167,8 @@
         "id": "3t0JBekZsE0j"
       },
       "source": [
-        "print(\"train shape:\",X_train.shape)\n",
-        "print(\"test shape:\",X_test.shape)"
+        "print(\"X_train shape:\",X_train.shape)\n",
+        "print(\"X_test shape:\",X_test.shape)"
       ],
       "execution_count": null,
       "outputs": []
@@ -183,7 +183,6 @@
         "image_shape = (64, 64)\n",
         "n_cols = 1\n",
         "plt.figure(figsize=(2. * n_cols, 2.26 * 5))\n",
-        "\n",
         "for i in range(5):\n",
         "    true_face = np.hstack((X_test[i], y_test[i]))\n",
         "    sub = plt.subplot(5, n_cols, i * n_cols + 1)\n",
