--- a/DecisionTreesRegression2.ipynb
+++ b/DecisionTreesRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOnKTUOfUYD+858/voIx0Bh",
+      "authorship_tag": "ABX9TyOCN0pbQnTx2NfxOb83C3Jq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,6 +107,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4WJ2Q8EyassK"
+      },
+      "source": [
+        "targets"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Yk0DlCd8jrcO"
@@ -121,8 +132,8 @@
         "id": "3JUe6Ykh8TUF"
       },
       "source": [
-        "test = data[targets < 30]\n",
-        "train = data[targets >= 30]  # Test on independent people\n",
+        "test = data[targets > 30]\n",
+        "train = data[targets < 30]  # Test on independent people\n",
         "print(\"train shape:\",train.shape)\n",
         "print(\"test shape:\",test.shape)"
       ],
@@ -136,10 +147,22 @@
       },
       "source": [
         "# Test on a subset of people\n",
-        "n_faces = 5\n",
-        "rng = check_random_state(4)\n",
-        "face_ids = rng.randint(test.shape[0], size=(n_faces, ))\n",
+        "n_faces = 5 #change this number to change the test set number\n",
+        "#comment out next line to change face selections\n",
+        "rng = check_random_state(1)\n",
+        "face_ids = rng.randint(test.shape[0], size=(n_faces ))\n",
         "test = test[face_ids, :]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s-l6wT_pFryr"
+      },
+      "source": [
+        "face_ids"
       ],
       "execution_count": null,
       "outputs": []
@@ -184,7 +207,8 @@
         "n_cols = 1\n",
         "plt.figure(figsize=(2. * n_cols, 2.26 * 5))\n",
         "for i in range(5):\n",
-        "    true_face = np.hstack((X_test[i], y_test[i]))\n",
+        "    #Stack arrays in sequence horizontally (column wise)\n",
+        "    true_face = np.hstack((X_test[i], y_test[i]))#\n",
         "    sub = plt.subplot(5, n_cols, i * n_cols + 1)\n",
         "    sub.axis(\"off\")\n",
         "    sub.imshow(true_face.reshape(image_shape),\n",
@@ -273,6 +297,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-G02EAWmcBaN"
+      },
+      "source": [
+        "**Assignment**<br>\n",
+        "Change the parameters of the models and note the differences in the faces. "
+      ]
     }
   ]
 }
