--- a/DecisionTreesRegression2.ipynb
+++ b/DecisionTreesRegression2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNpQsGKlaRj0ygbLfqanid1",
+      "authorship_tag": "ABX9TyNwyD670HaZSyglduNicIkX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -255,7 +255,8 @@
         "id": "3yB0HOMpfVgu"
       },
       "source": [
-        "[RidgeCV](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeCV.html)<br>\n",
+        "[RidgeCV](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeCV.html)<br>(Ridge Regression with Cross Validation)<br>\n",
+        "\n",
         "class sklearn.linear_model.RidgeCV(alphas=(0.1, 1.0, 10.0), *, fit_intercept=True, normalize='deprecated', scoring=None, cv=None, gcv_mode=None, store_cv_values=False, alpha_per_target=False)"
       ]
     },
