--- a/DecisionTreesRegression3.ipynb
+++ b/DecisionTreesRegression3.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM7O6nC0GIWfyxclM1njlQc",
+      "authorship_tag": "ABX9TyMgXco48xMi1FnT5FecAxD4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,9 +88,7 @@
         "id": "CIWyYRJYJsGR"
       },
       "source": [
-        "The decision trees is used to predict simultaneously the noisy x and y observations of a circle given a single underlying feature. As a result, it learns local linear regressions approximating the circle.\n",
-        "\n",
-        "We can see that if the maximum depth of the tree (controlled by the max_depth parameter) is set too high, the decision trees learn too fine details of the training data and learn from the noise, i.e. they overfit."
+        "The decision trees is used to predict simultaneously the noisy x and y observations of a circle given a single underlying feature. As a result, it learns local linear regressions approximating the circle."
       ]
     },
     {
@@ -101,7 +99,9 @@
       "source": [
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "from sklearn.tree import DecisionTreeRegressor"
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "from sklearn.metrics import max_error"
       ],
       "execution_count": null,
       "outputs": []
@@ -123,7 +123,7 @@
       "source": [
         "# Create a random dataset\n",
         "rng = np.random.RandomState(1)\n",
-        "X = np.sort(200 * rng.rand(100, 1) - 100, axis=0)\n",
+        "X = np.sort(200 * rng.rand(1000, 1) - 100, axis=0)\n",
         "y = np.array([np.pi * np.sin(X).ravel(), np.pi * np.cos(X).ravel()]).T\n",
         "#y[::5, :] += (0.5 - rng.rand(20, 2))"
       ],
@@ -137,7 +137,7 @@
       },
       "source": [
         "print(\"X shape:\",X.shape)\n",
-        "print(\"y share:\",y.shape)"
+        "print(\"y shape:\",y.shape)"
       ],
       "execution_count": null,
       "outputs": []
@@ -181,6 +181,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "9zOcGfavHMO7"
+      },
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.2, random_state=42)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "_jwxYYdKLJJ_"
       },
       "source": [
@@ -188,9 +200,9 @@
         "regr_1 = DecisionTreeRegressor(max_depth=2)\n",
         "regr_2 = DecisionTreeRegressor(max_depth=5)\n",
         "regr_3 = DecisionTreeRegressor(max_depth=8)\n",
-        "regr_1.fit(X, y)\n",
-        "regr_2.fit(X, y)\n",
-        "regr_3.fit(X, y)"
+        "regr_1.fit(X_train, y_train)\n",
+        "regr_2.fit(X_train, y_train)\n",
+        "regr_3.fit(X_train, y_train)"
       ],
       "execution_count": null,
       "outputs": []
@@ -202,10 +214,43 @@
       },
       "source": [
         "# Predict\n",
-        "X_test = np.arange(-100.0, 100.0, 0.01)[:, np.newaxis]\n",
+        "#X_test = np.arange(-100.0, 100.0, 0.01)[:, np.newaxis]\n",
         "y_1 = regr_1.predict(X_test)\n",
         "y_2 = regr_2.predict(X_test)\n",
         "y_3 = regr_3.predict(X_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s8Wro59wKDtv"
+      },
+      "source": [
+        "regr_1.score(X_test, y_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hG0ToGoWKxaW"
+      },
+      "source": [
+        "regr_2.score(X_test, y_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xNjrPOJ7K0a4"
+      },
+      "source": [
+        "regr_3.score(X_test, y_test)"
       ],
       "execution_count": null,
       "outputs": []
@@ -218,7 +263,7 @@
       "source": [
         "# Plot the results\n",
         "plt.figure()\n",
-        "s = 50 \n",
+        "s = 50 #size of the dot\n",
         "plt.scatter(y[:, 0], y[:, 1], c=\"navy\", s=s,\n",
         "             label=\"data\")\n",
         "plt.scatter(y_1[:, 0], y_1[:, 1], c=\"orange\", s=s,\n",
@@ -248,7 +293,7 @@
         "\n",
         "plt.xlabel(\"target 1\")\n",
         "plt.ylabel(\"target 2\")\n",
-        "plt.title(\"Multi-output Decision Tree Regression: Max Dept 5\")\n",
+        "plt.title(\"Multi-output Decision Tree Regression: Max Depth 5\")\n",
         "plt.legend(loc=\"best\")\n",
         "plt.show()"
       ],
