--- a/DecisionTreesRegression3.ipynb
+++ b/DecisionTreesRegression3.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMgXco48xMi1FnT5FecAxD4",
+      "authorship_tag": "ABX9TyOUO0ah08u8hhFhAO8YVZXj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,7 +101,8 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.tree import DecisionTreeRegressor\n",
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.metrics import max_error"
+        "from sklearn.metrics import max_error\n",
+        "from sklearn.model_selection import train_test_split"
       ],
       "execution_count": null,
       "outputs": []
