--- a/DecisionTreesRegression4.ipynb
+++ b/DecisionTreesRegression4.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOFMpxiMHcRwA0dU7oqvqyy",
+      "authorship_tag": "ABX9TyMZuXQuBDNnBj7fW7ZDGJFE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,6 +29,43 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jXfyI6Adf-1O"
+      },
+      "source": [
+        "In this notebool a decision tree is boosted using the AdaBoost.R2 algorithm"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Y9II8XkLgJ9W"
+      },
+      "source": [
+        "AdaBoost (Adaptive Boosting) can be used to improve (or boost) the performance of any ML algorithm. <br>\n",
+        "The biggest boost comes when using it with any model where accuracy is slightly better than random chance on a classification model. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9w8cq2vBgtiM"
+      },
+      "source": [
+        "The most suited and therefore most common algorithm used with AdaBoost are decision trees with one level"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S8k_-nh8hlTO"
+      },
+      "source": [
+        "**Import the libraries**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "oxKb5zDkwRjy"
@@ -38,10 +75,20 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from sklearn.tree import DecisionTreeRegressor\n",
-        "from sklearn.ensemble import AdaBoostRegressor"
+        "from sklearn.ensemble import AdaBoostRegressor\n",
+        "from sklearn.model_selection import train_test_split"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0hTjiYg4hn3c"
+      },
+      "source": [
+        "**Create a dataset with random noise**"
+      ]
     },
     {
       "cell_type": "code",
@@ -70,38 +117,48 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PQWxqQjWhtI9"
+      },
+      "source": [
+        "**Split the data into training and test datasets**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m2U6Hl0JUbPq"
+      },
+      "source": [
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, test_size=0.2, random_state=42)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "SOXeoVQLwySr"
       },
       "source": [
-        "print(\"X shape:\",X.shape)\n",
-        "print(\"y shape:\",y.shape)"
+        "print(\"X_train shape:\",X_train.shape)\n",
+        "print(\"y_train shape:\",y_train.shape)"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "yKerInB8xA-U"
+        "id": "aGDYR3j4hz96"
       },
       "source": [
-        "#X"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "R1ST3LKqxFxq"
-      },
-      "source": [
-        "#y"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "**Create and train two models:**<br>\n",
+        "1. Decision tree rergressor\n",
+        "2. AdaBoost regressor"
+      ]
     },
     {
       "cell_type": "code",
@@ -110,16 +167,25 @@
       },
       "source": [
         "# Fit regression model\n",
-        "regr_1 = DecisionTreeRegressor(max_depth=4)\n",
-        "\n",
+        "regr_1 = DecisionTreeRegressor(max_depth=1)\n",
+        "#notice the depth is 4 for the AdaBoostRegressor\n",
         "regr_2 = AdaBoostRegressor(DecisionTreeRegressor(max_depth=4),\n",
         "                           n_estimators=300, random_state=rng)\n",
         "\n",
-        "regr_1.fit(X, y)\n",
-        "regr_2.fit(X, y)"
+        "regr_1.fit(X_train, y_train)\n",
+        "regr_2.fit(X_train, y_train)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CxsB22nciWyw"
+      },
+      "source": [
+        "**Predict with the test set**"
+      ]
     },
     {
       "cell_type": "code",
@@ -128,6 +194,60 @@
       },
       "source": [
         "# Predict\n",
+        "y_1 = regr_1.predict(X_train)\n",
+        "y_2 = regr_2.predict(X_train)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1iIviS1QexC8"
+      },
+      "source": [
+        "print(y_1.shape)\n",
+        "print(X_train.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ihyYb3NDihJF"
+      },
+      "source": [
+        "**Compare the accuracy scores of the two models**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LWiLjpvDT42V"
+      },
+      "source": [
+        "print(regr_1.score(X_test,y_test))\n",
+        "print(regr_2.score(X_test,y_test))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rip9-zeHim_Y"
+      },
+      "source": [
+        "**Predict using the entire dataset and plot the full dataset predictions**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AYhLYeULfeER"
+      },
+      "source": [
         "y_1 = regr_1.predict(X)\n",
         "y_2 = regr_2.predict(X)"
       ],
@@ -141,7 +261,7 @@
       },
       "source": [
         "# Plot the results\n",
-        "plt.figure()\n",
+        "plt.figure(figsize=(8,8))\n",
         "plt.scatter(X, y, c=\"k\", label=\"training samples\")\n",
         "plt.plot(X, y_1, c=\"g\", label=\"n_estimators=1\", linewidth=2)\n",
         "plt.plot(X, y_2, c=\"r\", label=\"n_estimators=300\", linewidth=2)\n",
@@ -153,6 +273,18 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pB5vKTKihEl9"
+      },
+      "source": [
+        "**Assignment**<br>\n",
+        "1. Change the depth of the decision tree. <br>\n",
+        "Note the difference in the performance \n",
+        "2. Change the number of esstimators. What kind of impact doess this have on the performance of the models?"
+      ]
     },
     {
       "cell_type": "markdown",
