--- a/DecisionTreesRegression4.ipynb
+++ b/DecisionTreesRegression4.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression4.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMZuXQuBDNnBj7fW7ZDGJFE",
+      "authorship_tag": "ABX9TyPzYuWrQsLptEI3kJhgvZSt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,16 @@
         "id": "jXfyI6Adf-1O"
       },
       "source": [
-        "In this notebool a decision tree is boosted using the AdaBoost.R2 algorithm"
+        "# **In this notebook a decision tree is boosted using the AdaBoost.R2 algorithm**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4IDJv9xnjQqF"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -54,6 +63,42 @@
       },
       "source": [
         "The most suited and therefore most common algorithm used with AdaBoost are decision trees with one level"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ehfBNmEAkUZq"
+      },
+      "source": [
+        "# Clone the entire repo.\n",
+        "!git clone -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xpNOqhS2kdII"
+      },
+      "source": [
+        "from IPython.display import Image\n",
+        "Image(\"images/adaboost1.png\" , width=640)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r9pVovUXkt5P"
+      },
+      "source": [
+        "Boosting is done by letting the first model (Model 1) make predictions. The incorrect predictions are then used as input into the next model (Model 2). This is done for each model in the boost. \n",
+        "<br>\n",
+        "[Adaboosting](https://www.mygreatlearning.com/blog/adaboost-algorithm//)"
       ]
     },
     {
@@ -303,12 +348,7 @@
         "id": "webfQvdev6C7"
       },
       "source": [
-        "# Author: Noel Dawe <noel.dawe@gmail.com>\n",
-        "#\n",
-        "# License: BSD 3 clause\n",
-        "\n",
         "import matplotlib.pyplot as plt\n",
-        "\n",
         "from sklearn.datasets import make_gaussian_quantiles\n",
         "from sklearn.ensemble import AdaBoostClassifier\n",
         "from sklearn.metrics import accuracy_score\n",
@@ -320,29 +360,26 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-WEmpLoovfoc"
+        "id": "cyIAYIo-lu19"
       },
       "source": [
-        "# Author: Noel Dawe <noel.dawe@gmail.com>\n",
-        "#\n",
-        "# License: BSD 3 clause\n",
-        "\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "from sklearn.datasets import make_gaussian_quantiles\n",
-        "from sklearn.ensemble import AdaBoostClassifier\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.tree import DecisionTreeClassifier\n",
-        "\n",
-        "\n",
         "X, y = make_gaussian_quantiles(n_samples=13000, n_features=10,\n",
         "                               n_classes=3, random_state=1)\n",
         "\n",
         "n_split = 3000\n",
         "\n",
         "X_train, X_test = X[:n_split], X[n_split:]\n",
-        "y_train, y_test = y[:n_split], y[n_split:]\n",
-        "\n",
+        "y_train, y_test = y[:n_split], y[n_split:]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GM8M691wlyPk"
+      },
+      "source": [
         "bdt_real = AdaBoostClassifier(\n",
         "    DecisionTreeClassifier(max_depth=2),\n",
         "    n_estimators=600,\n",
@@ -352,11 +389,29 @@
         "    DecisionTreeClassifier(max_depth=2),\n",
         "    n_estimators=600,\n",
         "    learning_rate=1.5,\n",
-        "    algorithm=\"SAMME\")\n",
-        "\n",
+        "    algorithm=\"SAMME\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FV5oX8sml3Ns"
+      },
+      "source": [
         "bdt_real.fit(X_train, y_train)\n",
-        "bdt_discrete.fit(X_train, y_train)\n",
-        "\n",
+        "bdt_discrete.fit(X_train, y_train)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y86pwJdol9kR"
+      },
+      "source": [
         "real_test_errors = []\n",
         "discrete_test_errors = []\n",
         "\n",
@@ -368,15 +423,56 @@
         "        1. - accuracy_score(discrete_train_predict, y_test))\n",
         "\n",
         "n_trees_discrete = len(bdt_discrete)\n",
-        "n_trees_real = len(bdt_real)\n",
-        "\n",
+        "n_trees_real = len(bdt_real)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QX1AaZYkmWX_"
+      },
+      "source": [
         "# Boosting might terminate early, but the following arrays are always\n",
         "# n_estimators long. We crop them to the actual number of trees here:\n",
         "discrete_estimator_errors = bdt_discrete.estimator_errors_[:n_trees_discrete]\n",
         "real_estimator_errors = bdt_real.estimator_errors_[:n_trees_real]\n",
-        "discrete_estimator_weights = bdt_discrete.estimator_weights_[:n_trees_discrete]\n",
+        "discrete_estimator_weights = bdt_discrete.estimator_weights_[:n_trees_discrete]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nr8eKtytmZB1"
+      },
+      "source": [
+        "print(\"Discrete:\",bdt_discrete.score(X_test, y_test))\n",
+        "print(\"Real:\",bdt_real.score(X_test, y_test))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QYLaaqdRu_X1"
+      },
+      "source": [
+        "SAMME.R uses the probability estimates to update the additive model, while SAMME uses the classifications only. As the example illustrates, the SAMME.R algorithm typically converges faster than SAMME, achieving a lower test error with fewer boosting iterations. The error of each algorithm on the test set after each boosting iteration is shown on the left, the classification error on the test set of each tree is shown in the middle, and the boost weight of each tree is shown on the right. All trees have a weight of one in the SAMME.R algorithm and therefore are not shown\n",
         "\n",
-        "plt.figure(figsize=(15, 5))\n",
+        "https://scikit-learn.org/stable/auto_examples/ensemble/plot_adaboost_multiclass.html\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-WEmpLoovfoc"
+      },
+      "source": [
+        "plt.figure(figsize=(20, 10))\n",
         "\n",
         "plt.subplot(131)\n",
         "plt.plot(range(1, n_trees_discrete + 1),\n",
