--- a/FeatureSelection2.ipynb
+++ b/FeatureSelection2.ipynb
@@ -501,7 +501,7 @@
         "from sklearn.feature_selection import RFE\n",
         "\n",
         "model = RandomForestClassifier(n_estimators=700)\n",
-        "rfe = RFE(model, 4)\n",
+        "rfe = RFE(model)\n",
         "start = time.process_time()\n",
         "RFE_X_Train = rfe.fit_transform(X_Train,Y_Train)\n",
         "RFE_X_Test = rfe.transform(X_Test)\n",
@@ -519,7 +519,7 @@
       },
       "source": [
         "model = RandomForestClassifier(n_estimators=700)\n",
-        "rfe = RFE(model, 4)\n",
+        "rfe = RFE(model)\n",
         "RFE_X_Train = rfe.fit_transform(X_Train,Y_Train)\n",
         "model.fit(RFE_X_Train,Y_Train) \n",
         "print(\"Number of Features: \", rfe.n_features_)\n",
