--- a/CrossValidation1.ipynb
+++ b/CrossValidation1.ipynb
@@ -416,7 +416,8 @@
         "id": "1keIY1qsWA3Y"
       },
       "source": [
-        "kfold = KFold(3, True, 1)"
+        "kfold = KFold(3)\n",
+        "KFold()"
       ],
       "execution_count": null,
       "outputs": []
@@ -448,7 +449,7 @@
         "# data sample\n",
         "data = array([0.1, 0.2, 0.3, 0.4, 0.5, 0.6])\n",
         "# prepare cross validation\n",
-        "kfold = KFold(3, True, 1)\n",
+        "kfold = KFold(3, True)\n",
         "# enumerate splits\n",
         "for train, test in kfold.split(data):\n",
         "\tprint('train: %s, test: %s' % (data[train], data[test]))"
