--- a/CrossValidation1.ipynb
+++ b/CrossValidation1.ipynb
@@ -557,6 +557,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "Image(\"images/leaveOneOut.png\" , width=400)"
+      ],
+      "metadata": {
+        "id": "LpeSPLYSEPTq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Nutz1CR2Y924"
