--- a/HyperParameterTuning_1.ipynb
+++ b/HyperParameterTuning_1.ipynb
@@ -6,7 +6,7 @@
       "name": "HyperParameterTuning 1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNIMNe/TeMVzjp5T1BH3sco",
+      "authorship_tag": "ABX9TyOBJTn/IginSCK3W+cLgIee",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,8 @@
         "from matplotlib import pyplot\n",
         "from sklearn.datasets import make_blobs\n",
         "from sklearn.datasets import make_moons\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.tree import DecisionTreeClassifier"
       ],
       "metadata": {
         "id": "nW1XjyijHKpw"
