--- a/HyperParameterTuning_DNN_.ipynb
+++ b/HyperParameterTuning_DNN_.ipynb
@@ -6,7 +6,7 @@
       "name": "HyperParameterTuning DNN .ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOV6KEPD0gvjEPVrNW6Ybfj",
+      "authorship_tag": "ABX9TyN3/PC2sZ0QpLtgqTYEuqSz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,7 +60,8 @@
         "from sklearn.model_selection import GridSearchCV\n",
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.layers import Dense\n",
-        "from scikeras.wrappers import KerasClassifier"
+        "from scikeras.wrappers import KerasClassifier\n",
+        "from sklearn.model_selection import RandomizedSearchCV"
       ],
       "metadata": {
         "id": "kw4SNM9PfqvP"
@@ -180,6 +181,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Grid Search**"
+      ],
+      "metadata": {
+        "id": "td-qhB3AosYN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# define the grid search parameters\n",
@@ -221,6 +231,49 @@
         "for mean, stdev, param in zip(means, stds, params):\n",
         "    print(\"%f (%f) with: %r\" % (mean, stdev, param))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Random Search**"
+      ],
+      "metadata": {
+        "id": "GH2hravnov1p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random = RandomizedSearchCV(model, param_grid,n_iter=9)"
+      ],
+      "metadata": {
+        "id": "nZC8CUGonDUj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "random.fit(X,y)"
+      ],
+      "metadata": {
+        "id": "uLKuZ24bnUrX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Tuned Logistic Regression Parameters: {}\".format(random.best_params_))\n",
+        "print(\"Best score is {}\".format(random.best_score_))"
+      ],
+      "metadata": {
+        "id": "6oRVmsdNnZ7r"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
